<resources>
    <string name="app_name">Practica</string>
    <string name="user">Usuario</string>
    <string name="fillLogin">Introduce DNI</string>
    <string name="password">Contraseña</string>
    <string name="wrongPassword">Contraseña incorrecta</string>
    <string name="fillPass">Introduce password</string>
    <string name="botonLogin">Acceder</string>
    <string name="loginTitle">Login</string>
    <string name="seguimientoTitle">Seguimiento</string>
    <string name="menuTitle">Menú</string>
    <string name="testTitle">Nuevo Test</string>
    <string name="ejercicioTitle">Nuevo Ejercicio</string>
    <string name="welcome">Bienvenido </string>
    <string name="leccion">Leccion 1: Introducción</string>
    <string name="botonTest">Nuevo test</string>
    <string name="botonEjercicio">Nuevo ejercicio</string>
    <string name="botonSeguimiento">Seguimiento</string>
    <string name="botonSacarFoto">Sacar foto</string>
    <string name="botonSubirFichero">Subir fichero</string>
    <string name="botonGrabarAudio">Grabar audio</string>
    <string name="botonGrabarVideo">Grabar video</string>
    <string name="botonEnviar">Enviar</string>
    <string name="botonAyuda">Ver ayuda</string>
    <string name="toastAcierto">¡Correcto!</string>
    <string name="toastFallo">¡Has fallado!</string>
    <string name="sinCamara">Lo siento, tú teléfono no tiene cámara</string>
    <string name="sinAppCamara">Lo siento, no tienes ninguna app que use la cámara</string>
    <string name="sinMicro">Lo siento, tú teléfono no tiene microfono</string>
    <string name="sinAppMicro">Lo siento, no tienes ninguna app que grabe audio</string>
    <string name="permisoDenegado">Lo siento, no tengo los permisos necesarios</string>
    <string name="noConexion">Lo siento, no tienes conexion a Internet</string>
    <string name="noConexionSubir">Lo siento, no tienes conexion a Internet para subir la respuesta</string>
    <string name="subidaCorrecta">Subido correctamente</string>
    <string name="respuestaToServer">Respuesta enviada al servidor</string>
</resources>
