<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.tta.practica.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:text="@string/user"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <EditText
                android:id="@+id/login"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="@string/fillLogin"/>

            <TextView
                android:text="@string/password"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>
            <EditText
                android:id="@+id/pass"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:hint="@string/fillPass"/>
        </GridLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonLogin"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
